<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:background="#DCDCDC"
    android:scrollbars="vertical"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#DCDCDC"

    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/one"
    android:background="#FFFFFF"
    android:elevation="5dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hotel name"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/map"
            android:src="@drawable/maproom"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            android:layout_marginLeft="8dp"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:id="@+id/location"
            android:layout_toRightOf="@id/map"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ratinglayout"
            android:layout_toRightOf="@id/map"
            android:layout_below="@id/location"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:textColor="#FFFFFF"
                android:id="@+id/ratingdigit"
                android:textStyle="bold"
                android:textSize="10sp"
                android:gravity="center"
                android:text="4.9"
                android:background="@drawable/numberrectangle"/>
            <TextView
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:id="@+id/ratingcomment"
                android:textColor="#3CD80D"
                android:textSize="10sp"
                android:gravity="center"
                android:text="Very good"
                android:background="@drawable/commentrectangle"/>
            <TextView
                android:layout_width="85dp"
                android:layout_height="20dp"
                android:id="@+id/noofratings"
                android:textSize="10sp"
                android:gravity="center"
                android:text="324 Ratings >"/>

        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:background="#D7D1C9"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

       >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/hot"
            android:src="@drawable/hot"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/hot"
            android:layout_toRightOf="@id/hot"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:background="#D7D1C9"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/facilitiesrecyclerview">

    </android.support.v7.widget.RecyclerView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F2F2"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/captain"
            android:textStyle="bold"
            android:text="@string/oyocaptain"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/says"
            android:textColor="#000000"
            android:layout_marginTop="3dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_below="@id/captain"
            />
        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/captain"/>

    </RelativeLayout>
</LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:elevation="5dp"
        android:orientation="vertical"
        android:background="#FFFFFF">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkin"
                android:textColor="#E50000"
                android:textStyle="bold"
                android:text="Today"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkin"
                android:textColor="#000000"
                android:layout_marginTop="3dp"
                android:layout_below="@id/checkin"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/calender"
                android:layout_centerHorizontal="true"
                android:id="@+id/calender"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/calender"
                android:layout_centerHorizontal="true"
                android:text="Days"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkout"
                android:layout_marginRight="10dp"
                android:textColor="#E50000"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:text="Tomorrow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:textColor="#000000"
                android:layout_marginTop="3dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/checkout"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:background="#D7D1C9"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#E50000"
            android:layout_marginTop="3sp"
            android:textStyle="bold"
            android:text="@string/roomandpersons"
            android:layout_gravity="center"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:paddingLeft="10sp"
            android:paddingRight="10dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anountpayable"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/price"
                android:text="INR"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INR"
                android:textStyle="bold"
                android:id="@+id/price"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#000000"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F2F2F2"
            android:orientation="vertical"
            android:padding="8dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tarrifhead"
                    android:text="@string/tariffhead"
                    android:layout_marginTop="3dp"
                    android:textColor="#696969"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:layout_below="@id/tarrifhead"
                    android:text="@string/tarrifdesc"
                    android:textColor="#696969"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="INR"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="#696969"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="15dp"
                android:background="#D7D1C9"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F2F2F2"
                android:text="@string/pricedrop"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F2F2F2"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/inr"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="15dp"
                android:background="#D7D1C9"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:paddingLeft="5dp"
                android:text="@string/coupon"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="15dp"
                android:background="#D7D1C9"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:paddingLeft="5dp"
                android:text="@string/oyomoney"/>
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:background="#FFFFFF"
        android:elevation="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookingfor"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_alignParentEnd="true"
            android:drawableTint="#E50000"
            android:textStyle="bold"
            android:drawablePadding="10dp"
          android:drawableRight="@drawable/edit"
            android:textColor="#E50000"
            />

    </RelativeLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#FFFFFF"
        android:paddingTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:background="#000000"
            android:text="Please Read"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F2F2"
        android:padding="18dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:drawablePadding="10dp"
            android:text="@string/search"
            android:textStyle="bold"
            android:drawableLeft="@drawable/search"/>

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:background="#FFFFFF"
        android:padding="18dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/proceeding"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Search"
            android:textColor="#FFFFFF"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="#E50000"
            android:id="@+id/search"
            android:textStyle="bold"
            android:layout_margin="12dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/thankyou"

            />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:background="#FFFFFF"
        android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:layout_marginBottom="10dp"
    android:text="@string/youmaylike"
    android:textColor="#000000"/>
<android.support.v7.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/similarroomsrecyclerview"
    >

</android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

</LinearLayout>
    </android.support.v4.widget.NestedScrollView>